--- a/DeliverySorter/composer.json
+++ b/DeliverySorter/composer.json
@@ -2,7 +2,8 @@
     "name": "uyilmaz/delivery-sorter",
     "description": "Delivery Sorter",
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=5.6.4",
+        "phpunit/phpunit": "6.3.*"
     },
     "autoload": {
         "psr-4": {
